# Shopify_Product_Migration

./: .env.sample  LICENSE  Makefile  README.md  pyproject.toml
src/shopify_migration/: __init__.py  main.py  shopify_client.py
tests/: test_shopify_client.py
